@@ -956,7 +956,10 @@ void gc_fullscreen_set(gboolean state)
     {
       gdk_window_set_decorations (window->window, 0);
       gdk_window_set_functions (window->window, 0);
-      gtk_window_fullscreen (GTK_WINDOW(window));
+#ifdef XF86_VIDMODE
+      if(properties->noxf86vm)
+#endif
+	gtk_window_fullscreen (GTK_WINDOW(window));
       gtk_widget_set_uposition (window, 0, 0);
     }
   else
@@ -968,7 +971,10 @@ void gc_fullscreen_set(gboolean state)
       if (is_mapped)
         gtk_widget_show (window);
       gdk_window_set_functions (window->window, GDK_FUNC_ALL);
-      gtk_window_unfullscreen (GTK_WINDOW(window));
+#ifdef XF86_VIDMODE
+      if(properties->noxf86vm)
+#endif
+	gtk_window_unfullscreen (GTK_WINDOW(window));
       gtk_widget_set_uposition (window, 0, 0);
     }
 
